--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AsteroidRadar">
+        android:theme="@style/Theme.AsteroidRadar"
+        android:name=".work.WorkScheduler">
         <activity
             android:name=".ui.MainActivity"
             android:exported="true">
@@ -18,7 +19,9 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+
     </application>
 
 </manifest>
